<resources>
    <string name="app_name">Wardroba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="su_Title">Sign Up</string>
    <string name="su_hint_email">Enter your Email</string>
    <string name="su_hint_password">Enter your Password</string>
    <string name="btn_submit">Submit</string>
    <string name="su_hint_confirm">Confirm your Password</string>
    <string name="si_title">Sign In</string>
    <string-array name="accessory_types">
        <item name="Hats" type="string">Hats</item>
        <item name="Shirts" type="string">Shirts</item>
        <item name="Coats" type="string">Coats</item>
        <item name="Socks" type="string">Socks</item>
        <item name="Shoes" type="string">Shoes</item>
    </string-array>
</resources>